- uploading user is now checked if he/she actually may update a existing sinner
- added a SetUserRole-Call, so that Admins can set roles (like other Admins or "ArchetypeAdmin or whatever")
- added the ability to create a group (with name)
- found a bug that prevented uploading for none-admins (damn - I'm just used to have all the rights...)

Application Changes:

- added a check, if a character is already uploaded before enabling the "open group dialog"-button
- Runtime now allows (or should allow) code from remote sources (plugin-dlls are not loaded otherwise under Windows-UAC)
- Globaloptions now saves which plugins are enabled in the registry
- Changing the URL of the Chummerhub-Repository in the options no longer crashes the program.
- refractored the CharacterTreeNodes, to support Groups in the frmCharacterRoster (not finished yet)
- hopefully fixed a IndexOutOfRangeException, that would occur when saving the options from the sinner-optionsdialog.
- searchdialog prototyped and search implemented
- Id of SINnerVisibility is now generated and not reused from the options for each Sinner (DuplicateKeyError)
- added a post prior to creating a new group, so the current sinner can be added automatically
- added the ability to create a group.
- added a "Archetype"-Checkbox for ArchetypeAdmins only (including a name)

Build 1.0.0.1

WebService Changes:

- added some telemetry data events and traces (only into the WebServer - no phoneing home in the client)
- patched a Bug in handling different SINners with the same Id. That should not happen, unless people are editing the Guids directly - but nethertheless, they can be deleted now withouth Primary Key constraints.
- implemented AdminGetSinners to create a backup of the whole Database. Plz note, that the Chummerfiles themself are NOT affected because they are on GDrive
- changed the initial search for the SINners by Authorization: SINners are grouped now: edit, group, view